tests/grammar/schema/type/type_fail_12/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:7:5
  |
7 |     "cards": [{"error": "error"}]
  |     ^ expected [{int:any}], got [{str(error):str(error)}]
  |
 --> ${CWD}/main.k:3:5
  |
3 |     cards: [{int:}]
  |     ^ variable is defined here, its type is [{int:any}], but got [{str(error):str(error)}]
  |